[gd_scene load_steps=2 format=3 uid="uid://cgy5ipfx6ohjl"]

[ext_resource type="Script" uid="uid://bfwxguchjkai6" path="res://script/roll_component.gd" id="1_ubie3"]

[node name="RollComponent" type="Timer"]
one_shot = true
script = ExtResource("1_ubie3")

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="." to="." method="_on_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
